--- a/styles/blog.css
+++ b/styles/blog.css
@@ -3,3 +3,11 @@ div{
   padding: 10px;
   margin-bottom:10px ;
 }
+.pici {
+  width: 70%;
+  height: 500px;
+margin-left: 200px;
+}
+.pic{
+background: lightblue;
+}
